rest api swagger added for non authorized & authorized functions
